# Bachelor

./: .gitmodules  README.md  korotkov_nfa2.cpp  korotkov_nfa2.h  matrix.hpp  nfa.cpp  nfa_pointer.cpp
Software/: Makefile  graphMaker.cpp  graphMaker.h  korotkov_nfa.cpp  korotkov_nfa.h  main.cpp  matrix.cpp  nfa.hpp  nfa_pointer.cpp  nfa_pointer.h  utils.cpp  utils.h
Software/benchmark/: script.sh  simulate.sh
Software/source/: CMakeLists.txt  benchmark_main.cpp  korotkov_nfa.h  main.cpp  utils.cpp  utils.h
